--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Valerio Valletta",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.4.0",
     "request": "^2.88.2"
